# MATLAB_CPP

./: README.md
call c++ from matlab/: CMakeLists.txt  MyMEXFunction.cpp  MyMEXFunction.hpp
call matlab from c++/: README.md
call matlab from c++/matlabData/: CMakeLists.txt  matlabdata.cpp
call matlab from c++/plot/: CMakeLists.txt  oneDimPlot.cpp
